Setup for HTTP Connection. Small variable changes.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	arduino-libraries/WiFiNINA@^1.8.4
 	adafruit/DHT sensor library@^1.4.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
+	bblanchon/ArduinoJson@^6.17.3
