--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
 	bblanchon/ArduinoJson@^6.17.3
+	paulstoffregen/OneWire@^2.3.5
+	milesburton/DallasTemperature@^3.9.1
